# ghc-javascript-ci

./: CHANGELOG.md  LICENSE  README.md  all.js  cabal.project  ghc-javascript-example.cabal
.github/workflows/: ci.yml
app/: Main.hs
